Actions
Bug #15965
closedString#grapheme_clusters does not work with wide encodings
Bug #15965:
String#grapheme_clusters does not work with wide encodings
Description
$ ruby2.5 -v -e 'p "abc".encode("UTF-16BE").grapheme_clusters'
ruby 2.5.5p157 (2019-03-15 revision 67260) [x86_64-darwin18]
[]
$ ruby2.6 -v -e 'p "abc".encode("UTF-16BE").grapheme_clusters'
ruby 2.6.3p62 (2019-04-16 revision 67580) [x86_64-darwin18]
[]
$ ruby -v -e 'p "abc".encode("UTF-16BE").grapheme_clusters'
ruby 2.7.0dev (2019-06-28T03:02:33Z master ff7f71b288) [x86_64-darwin18]
[]
Updated by nobu (Nobuyoshi Nakada) almost 7 years ago
- Status changed from Open to Closed
Applied in changeset git|2f6cc15cdb3d64135b29cfd5ee376a5a03ebbee7.
Fixed String#grapheme_clusters with wide encodings
-
string.c (get_reg_grapheme_cluster): make regexp from properly
encoded sources fro wide-char encodings. [Bug #15965] -
regparse.c (node_extended_grapheme_cluster): suppress false
duplicated range warning for the time being.
Updated by nagachika (Tomoyuki Chikanaga) over 6 years ago
- Backport changed from 2.4: DONTNEED, 2.5: REQUIRED, 2.6: REQUIRED to 2.4: DONTNEED, 2.5: REQUIRED, 2.6: DONE
ruby_2_6 r67741 merged revision(s) 8aecc90974ab1ac87056f77e2cb3406c5c041504,2f6cc15cdb3d64135b29cfd5ee376a5a03ebbee7.
Actions